force-app/main/default/objects/Internal_Document__c/Internal_Document__c.object-meta.xml
<CustomObject>
    <description>Documents that are only visible for u-blox users</description>
    <label>Internal Document</label>
    <nameField>
        <displayFormat>Doc-{00000}</displayFormat>
        <label>Internal Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>