force-app/main/default/objects/Internal_Document__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Short description of content</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>