force-app/main/default/objects/Internal_Document__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Internal Documents</relationshipLabel>
    <relationshipName>Internal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>