force-app/main/default/objects/Internal_Document__c/validationRules/No_PPP.validationRule-meta.xml
<ValidationRule>
    <fullName>No_PPP</fullName>
    <active>true</active>
    <description>Not to save PPP</description>
    <errorConditionFormula>ISPICKVAL(Document_Type__c,&quot;PPP&quot;)</errorConditionFormula>
    <errorMessage>PPP is now handled with Special Price Request.</errorMessage>
</ValidationRule>